[metadata]
name = genesis
version = attr: genesis.__version__
author = Leif Denby
author_email = leif@denby.eu
description = GENESIS toolkit for analysing coherent structures in atmospheric flows
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/leifdenby/genesis

[options]
packages=find:
install_requires =
  coloredlogs
  dask
  dask-image>=0.5.0
  hues
  ipdb
  luigi
  matplotlib
  netcdf4
  notebook
  numba
  pystan
  scikit-image
  scipy
  seaborn
  tqdm
  xarray

[options.packages.find]
where=.

[options.extras_require]
test =
  pytest
  nbval
  nb-black
lint =
  flake8
  black==21.9b0
dev =
  %(test)s
  %(lint)s
  pre-commit
  ipython

[isort]
profile=black

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = genesis/_version.py
versionfile_build = genesis/_version.py
tag_prefix =
